--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,9 +14,13 @@ body {
 .home {
     height: 100vh;
     width: 66vw;
-
     display: grid;
     align-content: space-around;
     justify-items: center;
     // grid-template-areas: 1fr 2fr 1fr;
 }
+
+$color-gray-one: #666666;
+$color-gray-two: #B3B3B3;
+
+@import './searchBar';
