--- a/src/style/recentPosts.scss
+++ b/src/style/recentPosts.scss
@@ -1,12 +1,9 @@
 .recent-posts {
-
   display: grid;
   align-content: center;
   justify-items: center;
 
-
   .recent-posts__wrapper {
-
     display: grid;
     grid-row-gap: 21px;
     width: 100%;
@@ -17,9 +14,10 @@
     }
     .recent-posts__posts {
       display: grid;
-      justify-content: space-evenly;
-      grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 42px;
+      @media screen and (min-width: 700px) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
     }
   }
 }
