styled results component searchbar

--- a/src/style/recentPosts.scss
+++ b/src/style/recentPosts.scss
@@ -10,7 +10,7 @@
 
     .recent-posts__heading {
       color: $color-blue-one;
-      font-size: 14xp;
+      font-size: 14px;
     }
     .recent-posts__posts {
       display: grid;
