--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -39,10 +39,10 @@
     line-height: 22px;
   }
 
-  .result-post__links{
-    //display: flex;
+  // .result-post__links{
+  //   //display: flex;
 
-  }
+  // }
 }
 
 .post-link {
