--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -39,15 +39,18 @@
     line-height: 22px;
   }
 
-  // .result-post__links{
-  //   //display: flex;
-
-  // }
+  .result-post__links{
+    //display: flex;
+    display: flex;
+    //height: 37px;
+  }
 }
 
 .post-link {
   min-height: 70px;
   display: flex;
+  flex-basis: 205px;
+  margin-right: 37px;
 
   .post-link__box {
     min-width: 70px;
