--- a/src/style/searchbar.scss
+++ b/src/style/searchbar.scss
@@ -9,7 +9,7 @@
     input {
       padding-left: 35px;
       color: $color-gray-one;
-      box-shadow: 2px 3px 28px 1px rgba(0, 0, 0, 0.1);
+      box-shadow: 2px 3px 20px 1px rgba(0, 0, 0, 0.1);
       border: 0px solid transparent;
       border-radius: 5px;
 
@@ -42,7 +42,11 @@
 
   input {
     height: 118px;
-    font-size: 48px;
+    font-size: 40px;
+    @media screen and (max-width: 600px) {
+      font-size: 23px;
+      height: 59px;
+    } 
   }
 }
 
